<resources>
    <string name="app_name">rak2287</string>
    <string name="region_dialog_title">Region</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="label_disconnected">Disconnected</string>
    <string name="label_connected">Connected</string>
    <string name="msg_connected">Connected. Toggle gateway switch on</string>
    <string name="gateway_on">On</string>
    <string name="gateway_off">Off</string>
    <string name="title_activity_devices">DevicesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment_device_list_label">Devices</string>
    <string name="fragment_device">Device</string>
    <string name="label_add">Add</string>

    <string name="label_button_devices">Devices</string>
    <string name="label_button_device_count">Devices: </string>
    <string name="label_device_address">Address</string>
    <string name="label_device_eui">EUI</string>
    <string name="label_device_nwkskey">nwkSKey</string>
    <string name="label_device_appskey">appSKey</string>
    <string name="label_device_name">Name</string>
    <string name="label_device_delete">Delete</string>
    <string name="label_device_save">Save</string>
    <string name="label_device_new_device_state"></string>
    <string name="label_usb_gateway">USB gateway</string>
    <string name="label_running">Running</string>
    <string name="msg_running">Gateway running, region </string>
    <string name="msg_running_warning">Do not unplug USB gateway until switch off!</string>
    <string name="label_stopped">Stopped</string>
    <string name="label_region">Region</string>
    <string name="label_zero">0</string>
    <string name="message_no_usb_connection_established">No USB connection established</string>
    <string name="msg_no_service">No service</string>
    <string name="msg_already_connected">Already connected</string>
    <string name="msg_unknown_usb_device">Unknown USB device</string>
    <string name="theme_name_dark">dark</string>
    <string name="theme_name_bright">bright</string>
    <string name="msg_finished">Finished </string>
    <string name="msg_connecting_usb_serial_port">Connecting USB serial port..</string>
    <string name="err_open_serial_port">Error open serial port: </string>
    <string name="label_load">Load</string>
    <string name="label_share">Share</string>
    <string name="enter_uri_dialog_title">Enter URL</string>
    <string name="load">Load</string>
    <string name="label_add_device">Add</string>
    <string name="label_load_devices">Load</string>
    <string name="label_share_devices">Share</string>
    <string name="label_clear_devices">Remove all</string>
    <string name="confirm_delete_dialog_title">Confirm delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_confirm_to_delete">Are you sure you want to delete?</string>
    <string name="label_save_device">Save</string>
    <string name="label_cancel_edit_device">Cancel</string>
    <string name="label_delete_device">Delete</string>
    <string name="label_address_item_addr">Address</string>
    <string name="label_address_item_eui">EUI</string>
    <string name="label_address_item_nwkskey">NwkSKey</string>
    <string name="label_address_item_appskey">AppSKey</string>
    <string name="label_address_item_name">Name</string>
    <string name="label_gateway">Gateway</string>
    <string name="label_preferences">Preferences</string>
    <string name="msg_gateway_identifier">Gateway identifier</string>
    <string name="msg_gateway_id_copied">Gateway ID copied to clipboard</string>
    <string name="msg_payload_copied">Payload copied to clipboard</string>
    <string name="msg_eui_copied">EUI copied to clipboard</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Payload activity -->
    <string name="title_activity_payload">Payload</string>
    <string name="payload_list_fragment_label">Payload</string>
    <string name="payload_item_fragment_label">Payload details</string>
    <string name="label_payload">Payload</string>

    <!-- Preference -->
    <string name="header_gateway">Send payload</string>
    <string name="header_gui">Screen</string>
    <string name="title_content_provider">Content provider Uri</string>
    <string name="title_theme">Theme</string>
    <string name="title_keep_screen_on">Keep the screen on</string>
    <string name="title_start_at_boot">Start at boot</string>
    <string name="header_service">Service</string>
    <string name="title_auto_start">Auto-start</string>
    <string name="label_payload_item_received">Recevied</string>
    <string name="label_payload_item_name">Name</string>
    <string name="label_payload_item_payload">Payload</string>
    <string name="label_payload_item_frequency">Frequency</string>
    <string name="label_payload_item_rssi">RSSI</string>
    <string name="label_payload_item_lsnr">LSNR</string>
    <string name="label_mhz">MHz</string>
    <string name="label_dbm">dBm</string>
    <string name="label_db">dB</string>
    <string name="msg_abp_addresses">ABP addresses </string>
    <string name="msg_share_payload">Payload </string>
    <string name="msg_usb_attached">USB device attached</string>
    <string name="msg_usb_detached">USB device detached</string>
    <string name="msg_no_payload"><![CDATA[< no payload >]]></string>
    <string name="msg_usb_device_access_denied">USB device access denied</string>
    <string name="msg_usb_device_no_driver">No driver</string>
    <string name="msg_usb_device_no_ports">No ports</string>
    <string name="msg_open_port">Open port</string>
    <string name="msg_usb_device_open_device">Open USB device</string>
    <string name="label_help">Help</string>
    <string name="label_send_log_snapshot">Share log</string>
    <string name="msg_share_log">Share log</string>

</resources>