<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_gateway"
        android:orderInCategory="100"
        android:title="@string/label_gateway"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_payload"
        android:orderInCategory="200"
        android:title="@string/label_payload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="200"
        android:title="@string/label_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:title="@string/label_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_log_snapshot"
        android:orderInCategory="200"
        android:title="@string/label_send_log_snapshot"
        app:showAsAction="ifRoom" />

</menu>
