<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/lgwPadding"
    tools:context=".AddressItemFragment">

    <TextView
        android:id="@+id/textview_address_item_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_device_new_device_state"
        />

    <TextView
        android:id="@+id/label_address_item_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview_address_item_state"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_address_item_addr"
        />

    <EditText
        android:id="@+id/edit_text_address_item_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_device_address"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_address_item_address"
        android:autofillHints="" />

    <TextView
        android:id="@+id/label_address_item_eui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_address_item_address"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_address_item_eui"
        />

    <EditText
        android:id="@+id/edit_text_item_eui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_device_eui"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_address_item_eui"
        android:autofillHints="" />

    <TextView
        android:id="@+id/label_address_item_nwkskey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_item_eui"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_address_item_nwkskey"
        />

    <EditText
        android:id="@+id/edit_text_address_item_nwkskey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/label_device_nwkskey"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/label_address_item_nwkskey" />

    <TextView
        android:id="@+id/label_address_item_appskey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_address_item_nwkskey"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_address_item_appskey"
        />

    <EditText
        android:id="@+id/editTextAddressAppSKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_device_appskey"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_address_item_appskey"
        android:autofillHints="" />

    <TextView
        android:id="@+id/label_address_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextAddressAppSKey"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_address_item_name"
        />

    <EditText
        android:id="@+id/editTextAddressItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_device_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/label_address_item_name"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>