<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/lgwPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayloadDetailFragment">

    <TextView
        android:id="@+id/textview_payload_item_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_device_new_device_state"
        />
    <TextView
        android:id="@+id/label_payload_item_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview_payload_item_state"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_payload_item_received"
        />
    <TextView
        android:id="@+id/text_view_payload_item_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lgwAddressListTextSize"
        app:layout_constraintTop_toBottomOf="@id/label_payload_item_received"
        />
    <TextView
        android:id="@+id/label_address_item_eui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/formMargin"
        app:layout_constraintTop_toBottomOf="@id/text_view_payload_item_received"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_address_item_eui"
        />
    <TextView
        android:id="@+id/text_view_payload_item_eui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lgwAddressListTextSize"
        app:layout_constraintTop_toBottomOf="@id/label_address_item_eui"
        />
    <TextView
        android:id="@+id/label_payload_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/formMargin"
        app:layout_constraintTop_toBottomOf="@id/text_view_payload_item_eui"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_payload_item_name"
        />
    <TextView
        android:id="@+id/text_view_payload_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lgwAddressListTextSize"
        app:layout_constraintTop_toBottomOf="@id/label_payload_item_name" />
    <TextView
        android:id="@+id/label_payload_item_payload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/formMargin"
        app:layout_constraintTop_toBottomOf="@id/text_view_payload_item_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_payload_item_payload"
        />
    <TextView
        android:id="@+id/text_view_payload_item_payload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lgwAddressListTextSize"
        app:layout_constraintTop_toBottomOf="@id/label_payload_item_payload"
        />
    <TextView
        android:id="@+id/label_payload_item_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/formMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_payload_item_payload"
        android:text="@string/label_payload_item_frequency"
        />
    <TextView
        android:id="@+id/text_view_payload_item_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lgwAddressListTextSize"
        app:layout_constraintTop_toBottomOf="@id/label_payload_item_frequency"
    />
    <TextView
        android:id="@+id/label_payload_item_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/formMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_payload_item_frequency"
        android:text="@string/label_payload_item_rssi"
        />
    <TextView
        android:id="@+id/text_view_payload_item_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lgwAddressListTextSize"
        app:layout_constraintTop_toBottomOf="@id/label_payload_item_rssi"
        />
    <TextView
        android:id="@+id/label_payload_item_lsnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/formMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_payload_item_rssi"
        android:text="@string/label_payload_item_lsnr"
        />
    <TextView
        android:id="@+id/text_view_payload_item_lsnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_payload_item_lsnr"
        android:textSize="@dimen/lgwAddressListTextSize"
        />

</androidx.constraintlayout.widget.ConstraintLayout>